public abstract class Conteudo implements Clicavel {

}
