package campoMinado;

public class Vazio extends Conteudo {

    //Métodos ----------------------------------------------------------------------------------------------------------
    @Override
    public int revelar() {
        return 0;
    }
}
